--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,11 +48,11 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=http://162.240.98.204:5001
     container_name: licita_frontend
     ports:
       - "5002:3000"
-    environment:
-      - NEXT_PUBLIC_API_URL=http://162.240.98.204:5001
     depends_on:
       - backend
     networks:
